[project]
name = "karax"
version = "0.1.0"
description = "karax web application"
authors = ["skylerlee <skyler.ac.lee@gmail.com>"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "CPY",  # flake8-copyright
]
preview = true
